fix: header nav correctly wrap on smaller viewport

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -174,6 +174,7 @@ header
     list-style: none
     margin: 0
     padding: 0
+    flex-wrap: wrap
 
     li
       border-bottom: 1px solid var(--border-color)
